--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "Titov Alexandr",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "hbs": "^4.1.2",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5"
