--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hbs": "^4.1.2",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.6.3",
     "three": "^0.129.0"
   },
   "devDependencies": {
