--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3'
 services:
   db:
-    image: mysql:5.7
+#    image: mysql:5.7
+    image: mariadb:10.3
     container_name: db
     environment:
       MYSQL_ROOT_PASSWORD: mysql
